# mailscrape

./: .gitignore  .rat-excludes  Cargo.toml  README.md  main.rs
.github/workflows/: build.yaml  rat.yaml
src/: display.rs  lib.rs  mailscrape.rs
src/analysis/: email_analyzer.rs  mod.rs  stats_analyzer.rs
src/api/: client.rs  mod.rs
src/models/: email.rs  mod.rs  stats.rs  thread.rs
