[package]
name = "mailscrape"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
serde = {  version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "mailscrape"
path = "main.rs"
