[package]
name = "mailscrape"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
tokio = { version = "1.47.1", features = ["full", "macros"] }
serde = {  version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "mailscrape"
path = "src/mailscrape.rs"