# Copyright 2025 Daan Hoogland
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.
[package]
name = "mailscrape"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
logforth = { version = "0.29.1", features = ["starter-log"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
tokio = { version = "1.47.1", features = ["full", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.42"

[[bin]]
name = "mailscrape"
path = "src/mailscrape.rs"
